# german-embassy-tehran-en

./: .gitignore  CLAUDE.md  DEVELOPER.md  Makefile  NOTICE.md  README.md  config.yaml  pyproject.toml  requirements.txt
embassy_mirror/: __init__.py  cli.py  config.py  crawler.py  extract.py  render.py  server.py  storage.py  urls.py
embassy_mirror/templates/: index.html  page.html
scripts/: run.ps1  run.sh
site/: index.html  mirror.json  search.json
site/pages/: 000d27bb790fe9ce.html  00801ceee486b552.html  0203c6b33f01e4d9.html  0ae31fe520867044.html  0dd0f81cc9f1052c.html  0ee4ac220f8b1409.html  102875ed540cd733.html  15836f01141888ed.html  18955effc77c5c1e.html  1c2c7493fa631557.html  1c81e2c532193d26.html  1d0ba4d49a50a8eb.html  2081cd32b10ae7fc.html  24adca4662cf6055.html  2c39fc4e8c35ab8d.html  2d6d10139d3d67b0.html  2e3a282d44b310e9.html  2f6052948b832ab0.html  35f5728652d95011.html  38e41ee92a126e17.html  399edc4db3318892.html  3b6f8b7933682150.html  3c3c66a7037dc2c6.html  3e4aca792f1170aa.html  3ed78ab009b8a963.html  43011e962fc5938b.html  44dca5144df77b2f.html  46240668df5c6988.html  57341ae9a9afba08.html  5bd6eb3a82f3c99c.html  5c19e07daf040af0.html  5ce43f049ed627c4.html  6ac57c094cbe6ba2.html  6ca794e68f66fec7.html  6cd7315e642b8bd8.html  7078af33eec446ea.html  71e0e0acbdb73354.html  75f5de2f80a48972.html  7864f210d0ed8d21.html  7950821642b32d99.html  (+39 more)
site/static/: style.css
tests/: fixture.html  test_extract.py  test_render.py  test_urls.py
web_mirror/: __init__.py  cli.py  config.py  crawler.py  extract.py  render.py  server.py  storage.py  translate.py  urls.py
web_mirror/static/: search.js
web_mirror/templates/: index.html  page.html
