[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teheran-english-mirror"
version = "1.0.0"
description = "A respectful local English text mirror for the German Embassy Tehran website"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Local project generated for personal use"}]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "Jinja2>=3.1,<4",
  "lxml>=5,<7",
  "PyYAML>=6,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
teheran-mirror = "embassy_mirror.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["embassy_mirror*"]

[tool.setuptools.package-data]
embassy_mirror = ["templates/*.html", "static/*.css", "static/*.js"]
