[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-mirror"
version = "1.0.0"
description = "Crawl any website, machine-translate content, and generate a static mirror"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Local project generated for personal use"}]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "Jinja2>=3.1,<4",
  "lxml>=5,<7",
  "PyYAML>=6,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
web-mirror = "web_mirror.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["web_mirror*"]

[tool.setuptools.package-data]
web_mirror = ["templates/*.html", "static/*.css", "static/*.js"]
